language/move-lang/tests/move_check/borrows/dereference_combo_invalid.exp
error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/dereference_combo_invalid.move:13:9
   │
12 │         if (cond) f = &mut s.f else f = &mut other.f;
   │                       -------- Field 'f' is still being mutably borrowed by this reference
13 │         *s;
   │         ^^ Invalid dereference.

error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/dereference_combo_invalid.move:20:9
   │
19 │         if (cond) f = &mut s.f else f = &mut s.g;
   │                       --------          -------- Field 'g' is still being mutably borrowed by this reference
   │                       │                  
   │                       Field 'f' is still being mutably borrowed by this reference
20 │         *s;
   │         ^^ Invalid dereference.

error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/dereference_combo_invalid.move:27:9
   │
26 │         if (cond) x = copy s else x = other;
   │                       ------ It is still being mutably borrowed by this reference
27 │         *s;
   │         ^^ Invalid dereference.

